##Text encoding: utf-8

2011-08-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: fixed goffice and gnumeric API versions.
	* libs/gcr/atomsdlg.cc: make color changes really work.
	* libs/gcr/grid.cc: improve navigation, and implement delete ans backspace.

2011-08-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atom.cc: add new GetColor(GdkRBGA&) method.
	* libs/gcr/atom.h: ditto.
	* libs/gcr/atomsdlg.cc: work on atom color and radius. 
	* libs/gcr/atomsdlg.h: ditto.
	* libs/gcr/grid.cc: don't diplay the cursor when column < 0.

2011-07-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atomsdlg.cc: some work on radii.
	* libs/gcr/atomsdlg.h: ditto.
	* libs/gcr/grid.cc: support double numbers edition.
	* libs/gcugtk/message.cc: fixed a crasher.

2011-07-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atomsdlg.cc: update element and coordinates.
	* libs/gcr/atomsdlg.h: cleaned out all deprecated methods.
	* libs/gcr/grid.cc: implement get/set_string.
	* libs/gcr/grid.h: ditto.
	* libs/gcu/atom.h: add new coordinates accessors.
	* ui/table/state-thermometer.ui: fixed the adjustment.

2011-07-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atomsdlg.cc: redesign progress.
	* libs/gcr/atomsdlg.h: ditto.
	* libs/gcr/cleavagesdlg.cc: fixed "Delete All" buttn sensitivity.

2011-07-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atomsdlg.cc: add a GrcGrid for the atom list.
	* libs/gcr/atomsdlg.h: ditto.
	* libs/gcr/cleavagesdlg.cc: restore missing label.
	* libs/gcr/document.cc: move Define() method from programs/crystal and fixed
	crash when a dialog is called twice.
	* libs/gcr/document.h: ditto.
	* libs/gcr/grid.cc: add protected columns and mouse wheel scrolling support.
	* programs/crystal/document.cc: move Define() method to parent class.
	* programs/crystal/document.h: ditto.
	* ui/crystal/atoms.ui: redesigned.
	* ui/crystal/cleavages.ui: restore missing label.
