@@ -68,7 +68,8 @@ private:
 	GcuAtomicRadius m_Radius;
 	int m_RadiusType, m_Charge;
 	vector<int> m_RadiiIndex;
-	unsigned long m_RadiiSignalID, m_EntryFocusOutSignalID, m_ColorSignalID;
+	unsigned long m_RadiiSignalID, m_EntryFocusOutSignalID, m_ColorSignalID,
+				  m_RadiusTypeSignalID, m_ChargeSignalID, m_ScaleSignalID;
 };
 
 }	//	namespace gcr
